# pulsemetrics

./: .gitignore  README.md
pulsemetrics-backend/: .env.example  Cargo.toml  docker-compose.yml
pulsemetrics-backend/migrations/: 001_initial_schema.sql
pulsemetrics-backend/src/: lib.rs  main.rs
pulsemetrics-backend/src/config/: mod.rs
pulsemetrics-backend/src/db/: mod.rs  pool.rs
pulsemetrics-backend/src/handlers/: health.rs  ingestion.rs  mod.rs
pulsemetrics-backend/src/middleware/: auth.rs  logging.rs  mod.rs
pulsemetrics-backend/src/models/: error.rs  event.rs  mod.rs
pulsemetrics-backend/src/routes/: mod.rs
pulsemetrics-backend/src/utils/: mod.rs
pulsemetrics-backend/tests/unit/: error_handling.rs  event_validation.rs  mod.rs
